# hyprlang-rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  llms.txt
.github/workflows/: rust.yml
benches/: config_generator.rs  mutation.rs  parsing.rs  retrieval.rs
examples/: README.md  example.conf  example_modified.conf  hyprland.conf  hyprland_api.rs  mutation_example.rs  nesting.rs  parse_hyprland.rs  pretty_print.rs  simple.rs
examples/nested/: appearance.conf  parent.conf  variables.conf
src/: config.rs  document.rs  error.rs  escaping.rs  expressions.rs  features.rs  handlers.rs  hyprland.rs  hyprlang.pest  lib.rs  mutation.rs  parser.rs  special_categories.rs  types.rs  variables.rs
tests/: conditional_directives_test.rs  expression_escaping_test.rs  hyprland_config_test.rs  hyprland_parity_test.rs  multi_file_mutation_test.rs  mutation_test.rs  parsing_edge_cases_test.rs  windowrule_v3_test.rs
