[package]
name = "hyprlang"
version = "0.3.0"
edition = "2024"
authors = ["Alex Spinu"]
description = "A scripting language interpreter and parser for Hyprlang and Hyprland configuration files."
keywords = ["hyprland", "scripting", "interpreter", "parser", "pest"]
categories = ["parsing", "config"]
documentation = "https://github.com/spinualexandru/hyprlang-rs#readme"
repository = "https://github.com/spinualexandru/hyprlang-rs"
homepage = "https://github.com/spinualexandru/hyprlang-rs"
license = "MIT OR Apache-2.0"

[features]
default = []
hyprland = []
mutation = []

[dependencies]
pest = { version = "2.8.4", features = ["pretty-print"] }
pest_derive = "2.8.4"

[lib]
name = "hyprlang"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "retrieval"
harness = false

[[bench]]
name = "mutation"
harness = false
required-features = ["mutation"]
